--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
   },
   "license": "MIT",
   "dependencies": {
-    "debounce": "^2.2.0",
-    "true-myth": "^8.4.0"
+    "@deepgram/browser-agent": "./browser-agent-0.1.0-dev3.tgz"
   }
 }
