--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/node": "^16.18.11",
     "jest": "^29.7.0",
     "jest-cli": "^29.7.0",
+    "nanoid": "^5.1.5",
     "puppeteer": "^21.9.0"
   },
   "license": "MIT",
